--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="body-main">
         <h2>Hi..! <br> I'am <span class="span-x1">Suvro B.</span>👋🏼</h2>
-        <p1 class="body-p2"><b>A passionate <span class="span-x2"></span>,<br>mainly curious on Ai and Backend Development.</b></p1>
+        <p1 class="body-p2"><b>A passionate <span class="span-x2"></span>,<br>mainly curious on Ai and Machine Learning. </b></p1>
 
     </div>
 
