added new links

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a href="https://github.com/elitsuv/kriko" target="_blank" class="link-box">
                             <img src="assets/github.png" alt="GitHub" class="link-icon"> GitHub
                         </a>
-                        <a href="#" class="link-box disabled">Not yet built</a>
+                        <a href="https://elitsuv.github.io/Kriko-AI/" target="_blank" class="link-box">Website</a>
                     </div>
                 </div>
         </section>
