--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
                         <a href="https://elitsuv.github.io/Kriko-AI/" target="_blank" class="link-box">Website</a>
                     </div>
                 </div>
+
+                <div class="project">
+                    <div class="dot-line"></div>
+                    <h4>NeuXor — Neural network of XOR gate</h4>
+                    <p>A Neural network of XOR gate logic built with numpy</p>
+                    <div class="project-links">
+                        <a href="https://github.com/elitsuv/NeuXor" target="_blank" class="link-box">
+                            <img src="assets/github.png" alt="GitHub" class="link-icon"> GitHub
+                        </a>
+                        <a href="#" class="link-box disabled">Not yet built</a>
+                    </div>
+                </div>
+
         </section>
 
         <section id="connect">
