--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>elitsuv</title>
-    <link rel="icon" type="image/x-icon" href="assets/suv.png">
+    <link rel="icon" type="image/x-icon" href="assets/suvroo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -466,7 +466,7 @@
             </div>
             <div class="hero">
                 <div class="profile-container">
-                    <img src="assets/suv.png" alt="Profile picture of Suvro" class="profile-image">
+                    <img src="assets/suvroo.png" alt="Profile picture of Suvro" class="profile-image">
                     <div class="name-container">
                         <h1 class="name">Suv</h1>
                         <p class="handle">@elitsuv</p>
@@ -562,3 +562,4 @@
     </div>
 </body>
 </html>
+
